data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1169.wast
;; 10. **Test for Mixed Mode Block Types:**     - Combine `br_table` targets that transition between `block`, `loop`, and `if-else` structures managed by different operands and target combinations.       - **Constraint Checked:** Validates branch target resolution across mixed mode control structures and ensuring operand compliance.       - **Edge Case Insight:** Checks comprehensive handling across varying control flow structures within a `br_table`.

(assert_invalid
  (module
    (func
      (block (result i32)
        (block
          (loop (block (if (br_table 0 1 2 (i32.const 0) (i64.const 1)) (i32.const 1))))
          (i32.const 0)
        )
      )
    )
  )
  "type mismatch"
)